--- a/travel-mate-client/package.json
+++ b/travel-mate-client/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-free": "^5.6.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "history": "^4.7.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "prop-types": "^15.6.2",
