--- a/travel-mate-server/package.json
+++ b/travel-mate-server/package.json
@@ -25,6 +25,7 @@
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
   },
