--- a/travel-mate-client/src/config.json
+++ b/travel-mate-client/src/config.json
@@ -1,1 +1,1 @@
-{ "environment": "development", "baseUrl": "http://localhost:5000" }
+{ "environment": "production", "baseUrl": "http://188.166.44.36" }
